# swft

./: .env  .env.example  .gitignore  DOCKER-QUICKSTART.md  Dockerfile  Makefile  README.md  app-design.md  dev-plan.md  pyproject.toml  test-multistage-build.ps1
app/: main.py
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml  setup.cfg
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: artifacts.py  assistant.py  projects.py  runs.py  storage.py  swft.py
backend/app/assistant/: __init__.py  config.py  model_config.json  models.py  prompts.py  schemas.py  service.py
backend/app/assistant/schema/: app_design.json  general.json  run_manifest.json  sbom.json  trivy_scan.json
backend/app/core/: cache.py  config.py  logging.py  security.py
backend/app/models/: api.py  domain.py  swft.py
backend/app/services/: azure_policy_sets.py  azure_regions.py  azure_services.py  catalog.py  exceptions.py  repository.py  swft.py
backend/app/services/orchestration/: README.md  __init__.py  actions.py  cli.py  detection.py  execution.py  live_adapter.py  models.py  service.py
backend/scripts/: start-dev.sh
backend/tests/: test_api.py  test_catalog.py  test_orchestration.py
backend/tests/data/appdesign/: demo-100-appdesign.md
backend/tests/data/orchestration/: live_api_snapshot.json  live_mode_planning_output.json  scanner_input.json
backend/tests/data/runs/: demo-100-run.json
backend/tests/data/sboms/: demo-100-sbom.json
backend/tests/data/scans/: demo-100-trivy.json
c-sharp/: .dockerignore  Dockerfile  README.md
csharp/: Dockerfile  setup-runner-vm.sh  sonar-project.properties
explore/: cosign.key  swft-pipeline.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  (+5 more)
(+133 files in other folders)
