[project]
name = "swft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "openai",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
