[project]
name = "swft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "openai",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "typer>=0.12.5",
    "rich>=13.9.4",
    "psycopg[binary]>=3.2.4",
    "azure-identity>=1.19.0",
    "orjson>=3.10.7",
]

[project.scripts]
swft = "swft.compliance.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["swft"]

[tool.uv.workspace]
members = ["backend"]
