[project]
name = "swft-backend"
version = "0.1.0"
description = "SWFT portal backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.3",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
    "python-multipart>=0.0.20",
    "orjson>=3.11.4",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.2.4"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
